--- a/src/main/resources/tempplates/mgr/domain/detail.html
+++ b/src/main/resources/tempplates/mgr/domain/detail.html
@@ -5,6 +5,7 @@
 <title th:text="${actionText} + '表单域'"></title>
 <link type="text/css" rel="stylesheet" th:href="@{/bs-3.3.7/css/bootstrap.min.css}"></link>
 <link type="text/css" rel="stylesheet" th:href="@{/bs-3.3.7/css/bootstrap-theme.min.css}"></link>
+<link type="text/css" rel="stylesheet" th:href="@{/bs-plugins/bootstrap-select/css/bootstrap-select.css}"></link>
 <style type="text/css">
 	.bottom-btns {
 		text-align: center;
@@ -13,14 +14,18 @@
 	.bottom-btns > button {
 		margin-right: 20px;
 	}
+	
+	.hand {
+		cursor: pointer; 
+	}
 </style>
 </head>
 <body>
 	<div th:replace="/fragments/layout::header('login') " />
 	<div class="container-fluid">
-		<form id="domain-detail" class="form form-horizontal" method="post" th:action="@{/mgr/domain/} + ${action}">
+		<form id="domain-detail" class="form form-horizontal" method="post" th:action="@{/mgr/domain/} + ${action}" th:object="${domain}">
 			<input type="hidden" name="action" /> 
-			<input type="hidden" name="id" th:value="${domain.id}" />
+			<input type="hidden" th:value="${domain.id}" th:field="*{id}" />
 			<div class="container-fluid">
 				<div class="row page-header">
 				  	<h4>basic info</h4>
@@ -29,13 +34,21 @@
 					<!-- *********** Form Domain 'domainname' *********** -->
 				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="domainname">Name</label>
 				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				      	<input type="text" class="form-control" id="domainname" name="domainname" placeholder="Name" th:value="${domain.domainname}" />
+				      	<input type="text" class="form-control" placeholder="Name" th:value="${domain.domainname}" th:field="*{domainname}" />
 					</div>
 					<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
 					<!-- *********** Form Domain 'domaincode' *********** -->
 				    <label class="col-xs-1 col-sm-1 col-md-1 col-lg-1 control-label" for="domaincode">Code</label>
 				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				      	<input type="text" class="form-control" id="domaincode" name="domaincode" placeholder="Code" th:value="${domain.domaincode}" />
+				      	<input type="text" class="form-control" placeholder="Code" th:value="${domain.domaincode}" th:field="*{domaincode}" />
+					</div>
+					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
+				</div>
+				<div class="row form-group">
+					<!-- *********** Form Domain 'description' *********** -->
+				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="description">Description</label>
+				    <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+				      	<input type="text" class="form-control" placeholder="Description" th:value="${domain.description}" th:field="*{description}" />
 					</div>
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
 				</div>
@@ -44,18 +57,25 @@
 					<div class="col-xs-offset-2 col-sm-offset-2 col-md-offset-2 col-lg-offset-2 col-xs-10 col-sm-10 col-md-10 col-lg-10">
 				      	<div class="checkbox">
 				        	<label>
-				          		<input type="checkbox" id="enabledbudgetctrl" name="enabledbudgetctrl"> Enable Budget Control
+				          		<input type="checkbox" th:field="*{enabledbudgetctrl}" /> Enable Budget Control
 				        	</label>
 				      	</div>
 				    </div>
 				</div>
-				<div class="row form-group">
-					<!-- *********** Form Domain 'description' *********** -->
-				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="description">Description</label>
-				    <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-				      	<input type="text" class="form-control" id="description" name="description" placeholder="Description" th:value="${domain.description}" />
-					</div>
-					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
+				<div class="row page-header">
+				  	<h4>budget control dimensions</h4>
+				</div>
+				<div class="row form-group budget-ctrl-dim" th:each="dim,dimStat:${domain.ctrlDimUIOptionVos}" th:attr="data-bind-code=${dim.dimcode}">
+				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="description" th:text="${dim.dimname}"></label>
+				   	<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 input-group">
+						<span class="input-group-addon">
+							<input type="checkbox" class="ctrl-dim-enabled" th:value="${dim.dimid}" th:attr="data-bind-code=${dim.dimcode},checked=${dim.enabled}">
+						</span>
+						<input type="hidden" class="dim-source" th:value="${dim.expression}" th:attr="data-bind-code=${dim.dimcode}" />
+			        	<input type="text" class="form-control dim-source-text visible-ui" th:value="${dim.expressiontext}" th:attr="data-bind-code=${dim.dimcode},disabled=!${dim.enabled}" readonly="readonly" />
+			        	<span class="input-group-addon dim-source-set hand visible-ui" th:attr="data-bind-code=${dim.dimcode},data-bind-index=${dimStat.index},disabled=!${dim.enabled},title='设置维度[' + ${dim.dimname} + ']数据源'">@</span>
+			      	</div>
+					<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5"></div>
 				</div>
 				<div class="row page-header">
 				  	<h4>data tag</h4>
@@ -64,7 +84,7 @@
 					<!-- *********** Form Domain 'datastatus' *********** -->
 				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="datastatus">Data Status</label>
 				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-						<select class="form-control" id="datastatus" name="datastatus">
+						<select class="form-control" th:field="*{datastatus}">
 							<option th:each="ds:${allDataStatus}" th:value="${ds.value}" th:text="${ds.text}"></option>
 						</select>
 					</div>
@@ -72,7 +92,7 @@
 					<!-- *********** Form Domain 'version' *********** -->
 				    <label class="col-xs-1 col-sm-1 col-md-1 col-lg-1 control-label" for="version">Version</label>
 				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				      	<input type="text" class="form-control" id="version" name="version" placeholder="Version" th:value="${domain.version}" readonly="readonly" />
+				      	<input type="text" class="form-control" placeholder="Version" th:value="${domain.version}" th:field="*{version}" readonly="readonly" />
 					</div>
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
 				</div>
@@ -80,14 +100,14 @@
 					<!-- *********** Form Domain 'createdat' *********** -->
 				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="createdat">Created At</label>
 				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-						<input type="hidden" id="createdat" name="createdat" th:value="${domain.createdat}" /> 
+						<input type="hidden" th:value="${domain.createdat}" th:field="*{createdat}" /> 
 						<input type="text" class="form-control date-show" readonly="readonly" />
 					</div>
 					<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
 					<!-- *********** Form Domain 'updatedat' *********** -->
 				    <label class="col-xs-1 col-sm-1 col-md-1 col-lg-1 control-label" for="updatedat">Updated At</label>
 				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-						<input type="hidden" name="updatedat" value="${domain.updatedat}" />
+						<input type="hidden" th:value="${domain.updatedat}" th:field="*{updatedat}" />
 						<input type="text" class="form-control date-show" readonly="readonly" />
 					</div>
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
@@ -108,9 +128,48 @@
 </body>
 <script type="text/javascript" th:src="@{/jquery/jquery-1.12.1.js}"></script>
 <script type="text/javascript" th:src="@{/bs-3.3.7/js/bootstrap.js}"></script>
-<script type="text/javascript">
+<script type="text/javascript" th:src="@{/bs-plugins/bootstrap-select/js/bootstrap-select.js}"></script>
+<script type="text/javascript" th:src="@{/bs-plugins/bootstrap-select/js/i18n/defaults-zh_CN.js}"></script>
+<script type="text/javascript" th:src="@{/js/zyc.js}" ></script>
+<script type="text/javascript" th:src="@{/js/zyc-form.js}" ></script>
+<script type="text/javascript" th:src="@{/js/zyc-tree-expression-modal.js}"></script>
+<script th:inline="javascript" type="text/javascript">
 	$(document).ready(function() {
+		//var ctrlDimSources = [[${domain.ctrlDimSources}]];
+		//alert(ctrlDimSources.length);
+		
+		var relation = [], temp;
+		for(var key in zyc.memberRelation) {
+			temp = zyc.memberRelation[key];
+			relation.push({ value: temp.value, text: temp.text });
+		}
+		
+		
+		$('span.dim-source-set.hand').off('click').on('click', function(e) {
+			if(!$(this).attr('disabled')) {
+				$(document.body).treeexpressionmodal({
+					id: 'dim_source_set_modal_' + $(this).attr('data-bind-index'),
+					relationOptions: relation
+				});
+			}
+		});
+		
+		$('input.ctrl-dim-enabled').off('change').on('change', function(e) {
+			var checked = $(this).is(":checked")
+				, commonSelector = '[data-bind-code="' + $(this).attr('data-bind-code') + '"]'
+				, $text = $('.dim-source-text' + commonSelector)
+				, $value = $('.dim-source' + commonSelector)
+				, keyBackupValue = 'backup-value';
 
+			$('.visible-ui' + commonSelector).attr('disabled', !checked);
+			if(checked) {
+				$text.val($text.data(keyBackupValue) || '');
+				$value.val($value.data(keyBackupValue) || '');
+			} else {
+				$text.data(keyBackupValue, $text.val() || '').val('');
+				$value.data(keyBackupValue, $value.val() || '').val('');
+			}
+		});
 	});
 </script>
 </html>
