--- a/src/main/resources/tempplates/mgr/domain/detail.html
+++ b/src/main/resources/tempplates/mgr/domain/detail.html
@@ -73,6 +73,7 @@
 						<span class="input-group-addon">
 							<input type="checkbox" class="ctrl-dim-enabled" th:name="${'ctrlDimSources[' + cdsStat.index + '].enabled'}" th:attr="data-bind-code=${cds.dimcode},checked=${cds.enabled}">
 						</span>
+						<input type="hidden" th:name="${'ctrlDimSources[' + cdsStat.index + '].id'}" th:value="${cds.id}" />
 						<input type="hidden" th:name="${'ctrlDimSources[' + cdsStat.index + '].formdomainid'}" th:value="${cds.formdomainid} == null ? ${domain.id} : ${cds.formdomainid}" />
 						<input type="hidden" th:name="${'ctrlDimSources[' + cdsStat.index + '].dimid'}" th:value="${cds.dimid}" />
 						<input type="hidden" th:name="${'ctrlDimSources[' + cdsStat.index + '].dimname'}" th:value="${cds.dimname}" />
